tests/snapshots/examples_fixtures/advanced__functional_pipeline.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/functional_pipeline.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `upper`.

  examples/advanced/functional_pipeline.flx:93:17
   |
93 |     let name1 = first(names) |> upper;
   |                 ^^^^^^^^^^^^
   |                 ------------ this argument has type `Option<String>`

Note:
  expected argument type: String
  found argument type: Option<String>

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.


Error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `upper`.

  examples/advanced/functional_pipeline.flx:96:17
   |
96 |     let name2 = first(rest(names)) |> upper;
   |                 ^^^^^^^^^^^^^^^^^^
   |                 ------------------ this argument has type `Option<String>`

Note:
  expected argument type: String
  found argument type: Option<String>

Help:
  This value might be `None`. Use `match` to unwrap it before using it here.

Found 2 errors.
== stdout ==
<not executed>
