tests/snapshots/examples_fixtures/advanced__shapes_records.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/shapes_records.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
