tests/snapshots/examples_fixtures/advanced__tuple_pipelines.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/tuple_pipelines.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/tuple_pipelines.flx:22:8
   |
22 |     |> map(/p -> p.0 + p.1)
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/tuple_pipelines.flx:26:8
   |
26 |     |> map(/p -> (p.0 * 10, p.1 * 10))
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/tuple_pipelines.flx:30:8
   |
30 |     |> filter(/p -> p.0 > 2)
   |        ^^^^^^

Hint:
  Define it first: let filter = ...;

Help:
  Did you mean `filtered`?


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/tuple_pipelines.flx:34:8
   |
34 |     |> fold(0, /(acc, p) -> acc + p.0 + p.1)
   |        ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/tuple_pipelines.flx:42:8
   |
42 |     |> map(/p -> p.0 * p.1)
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/tuple_pipelines.flx:46:8
   |
46 |     |> map(/p -> p.0 + p.1)
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/tuple_pipelines.flx:50:8
   |
50 |     |> fold(0, /(acc, p) -> acc + p.0)
   |        ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/tuple_pipelines.flx:56:8
   |
56 |     |> map(/p -> match p { (a, b) -> a + b, _ -> 0 })
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/tuple_pipelines.flx:61:8
   |
61 |     |> map(/p -> match p { (a, (b, c)) -> a + b * c, _ -> 0 })
   |        ^^^

Hint:
  Define it first: let map = ...;

Found 9 errors.
== stdout ==
<not executed>
