tests/snapshots/examples_fixtures/advanced__using_constants.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/using_constants.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
