tests/snapshots/examples_fixtures/advanced__using_list_module.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/using_list_module.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
